--- a/UAAdmin/Views/Shared/_LayoutLogin.cshtml
+++ b/UAAdmin/Views/Shared/_LayoutLogin.cshtml
@@ -29,7 +29,7 @@
     @RenderSection("scripts", false)
     <script src="~/js/bundle.js"></script>
     <script src="~/js/scripts.js"></script>
-    <script src="~/js/jQuery.min.js"></script>
+    @* <script src="~/js/jQuery.min.js"></script> *@
 
     <script src="~/assets/js/bundle.js"></script>
     <script src="~/assets/js/scripts.js"></script>
