--- a/UAAdmin/Views/Shared/_Layout.cshtml
+++ b/UAAdmin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@{
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -75,25 +77,27 @@
                                     <h6 class="overline-title text-primary-alt">Dashboards</h6>
                                 </li> *@<!-- .nk-menu-item -->
                                 <li class="nk-menu-item">
-                                    <a href="html/index.html" class="nk-menu-link">
-                                        <span class="nk-menu-icon"><em class="icon ni ni-cart-fill"></em></span>
-                                        <span class="nk-menu-text">Default</span>
+                                    <a asp-controller="Dashboard" asp-action="Dashboard" class="nk-menu-link active">
+                                        <span class="nk-menu-icon"><em class="icon ni ni-home"></em></span>
+                                        <span class="nk-menu-text">Dashboard</span>
                                     </a>
                                 </li>
                                 <li class="nk-menu-item has-sub">
-                                    <a href="#" class="nk-menu-link nk-menu-toggle">
-                                        <span class="nk-menu-icon"><em class="icon ni ni-ca"></em></span>
-                                        <span class="nk-menu-text">Crafted Icons</span>
+                                    <a class="nk-menu-link nk-menu-toggle inactive">
+                                        <span class="nk-menu-icon"><em class="icon ni ni-users"></em></span>
+                                        <span class="nk-menu-text">Users</span>
                                     </a>
                                     <ul class="nk-menu-sub">
                                         <li class="nk-menu-item">
-                                            <a href="html/components/misc/svg-icons.html" class="nk-menu-link">
-                                                <span class="nk-menu-text">SVG Icon - Exclusive</span>
+                                            <a asp-controller="User" asp-action="Index" class="nk-menu-link">
+                                                <span class="nk-menu-icon"><em class="icon ni ni-user-check"></em></span>
+                                                <span class="nk-menu-text">Active Users</span>
                                             </a>
                                         </li>
                                         <li class="nk-menu-item">
                                             <a href="html/components/misc/nioicon.html" class="nk-menu-link">
-                                                <span class="nk-menu-text">Nioicon - HandCrafted</span>
+                                                <span class="nk-menu-icon"><em class="icon ni ni-user-cross"></em></span>
+                                                <span class="nk-menu-text">Inactive Users</span>
                                             </a>
                                         </li>
                                     </ul><!-- .nk-menu-sub -->
@@ -129,8 +133,7 @@
                                                     <em class="icon ni ni-user-alt"></em>
                                                 </div>
                                                 <div class="user-info d-none d-xl-block">
-                                                    <div class="user-status user-status-unverified">Unverified</div>
-                                                    <div class="user-name dropdown-indicator">Abu Bin Ishityak</div>
+                                                    <div class="user-name dropdown-indicator">@Context.Session.GetString("AdminName")</div>
                                                 </div>
                                             </div>
                                         </a>
@@ -138,23 +141,22 @@
                                             <div class="dropdown-inner user-card-wrap bg-lighter d-none d-md-block">
                                                 <div class="user-card">
                                                     <div class="user-avatar">
-                                                        <span>AB</span>
+                                                        <span>@Context.Session.GetString("AdminName")[0]</span>
                                                     </div>
                                                     <div class="user-info">
-                                                        <span class="lead-text">Abu Bin Ishtiyak</span>
-                                                        <span class="sub-text">info@softnio.com</span>
+                                                        <span class="lead-text">@Context.Session.GetString("AdminName")</span>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="dropdown-inner">
+                                            @* <div class="dropdown-inner">
                                                 <ul class="link-list">
                                                     <li><a href="html/user-profile-regular.html"><em class="icon ni ni-user-alt"></em><span>View Profile</span></a></li>
                                                     <li><a href="html/user-profile-setting.html"><em class="icon ni ni-setting-alt"></em><span>Account Setting</span></a></li>
                                                 </ul>
-                                            </div>
+                                            </div> *@
                                             <div class="dropdown-inner">
                                                 <ul class="link-list">
-                                                    <li><a href="#"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
+                                                    <li><a asp-controller="Login" asp-action="Logout"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
